--- a/cplane-mock/Cargo.toml
+++ b/cplane-mock/Cargo.toml
@@ -1,3 +1,9 @@
 [package]
 name = "cplane-mock"
 version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+tokio = { version = "1", features = ["full"] }
+axum = { version = "0.7", features = ["query"] }
+serde = { version = "1", features = ["derive"]}
