--- a/postgres-mock/Cargo.toml
+++ b/postgres-mock/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+bytes = "1"
+hmac = "0.12"
+sha2 = "0.10"
+base64 = "0.13"
