--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -6,4 +6,14 @@ frontend proxy
 backend proxy_server
   mode tcp
   balance leastconn
-  server s1 proxy:5431 send-proxy-v2
+  server s1 proxy:5432 send-proxy-v2
+
+frontend https
+  mode tcp
+  bind :4443
+  default_backend https_server
+
+backend https_server
+  mode tcp
+  balance leastconn
+  server s2 proxy:4443 send-proxy-v2
