--- a/postgres-bench/Cargo.toml
+++ b/postgres-bench/Cargo.toml
@@ -4,9 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio-postgres = { version = "0.7.10" }
+
 rustls = { version = "0.22.0" }
 rustls-pki-types = { version = "1", features = ["std"] }
-tokio = { version = "1", features = ["full"] }
-tokio-postgres = { version = "0.7.10" }
 tokio-postgres-rustls = "0.11.0"
+
+tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7", features = ["rt"] }
+
+rand = "0.8"
+rand_distr = "0.4"
