--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
       context: .
       dockerfile: Dockerfile
     entrypoint: /usr/local/bin/postgres-mock
-    networks:
-      - proxy
 
   cplane:
     build:
@@ -14,8 +12,6 @@ services:
     entrypoint: /usr/local/bin/cplane-mock
     environment:
       PROXY_COMPUTE_ADDR: "postgres:5432"
-    networks:
-      - proxy
 
   load:
     build:
@@ -24,14 +20,12 @@ services:
     entrypoint: /usr/local/bin/postgres-bench
     environment:
       PG_HOST: "neon"
-      PG_ADDR: "172.16.238.10:5432"
+      PG_ADDR: "haproxy:5432"
       PG_CONNECTION_RATE: "400"
-      PG_CONNECTING_MAX: "500"
-      PG_CONNECTION_MAX: "8000"
+      PG_CONNECTING_MAX: "1000"
+      PG_CONNECTION_MAX: "12000"
     depends_on:
       - haproxy
-    networks:
-      - proxy
 
   haproxy:
     image: haproxy:2.9
@@ -44,9 +38,6 @@ services:
       - type: bind
         source: haproxy.cfg
         target: /usr/local/etc/haproxy/haproxy.cfg
-    networks:
-      proxy:
-        ipv4_address: 172.16.238.10
 
   proxy:
     image: "neondatabase/neon:release-4604"
@@ -79,12 +70,3 @@ services:
     depends_on:
       - cplane
       - postgres
-    networks:
-      - proxy
-
-networks:
-  proxy:
-    ipam:
-      driver: default
-      config:
-        - subnet: "172.16.238.0/24"
