--- a/cplane-mock/Cargo.toml
+++ b/cplane-mock/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-axum = { version = "0.7", features = ["query"] }
+axum = { version = "0.7", default-features = false, features = ["query", "http2", "json", "tokio"] }
 serde = { version = "1", features = ["derive"]}
