--- a/postgres-bench/Cargo.toml
+++ b/postgres-bench/Cargo.toml
@@ -15,3 +15,6 @@ tokio-util = { version = "0.7", features = ["rt"] }
 
 rand = "0.8"
 rand_distr = "0.4"
+
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-manual-roots", "json"]}
+typed-json = "0.1"
