--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["cplane-mock", "postgres-mock", "postgres-bench"]
+members = ["cplane-mock", "postgres-mock", "postgres-bench", "http-bench"]
