--- a/http-bench/Cargo.toml
+++ b/http-bench/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "postgres-bench"
+name = "http-bench"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio-postgres = { version = "0.7.10" }
-
-rustls = { version = "0.22.0" }
-rustls-pki-types = { version = "1", features = ["std"] }
-tokio-postgres-rustls = "0.11.0"
+reqwest = { version = "0.11", default-features = false, features = [
+    "rustls-tls-manual-roots",
+    "json",
+] }
+typed-json = "0.1"
 
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7", features = ["rt"] }
