Update proxy image and mocked control plane

--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -1,6 +1,15 @@
 global
   fd-hard-limit 20000
 
+defaults
+  log global
+  retries 3
+  timeout connect 5s
+  timeout client 10s
+  timeout server 10s
+  timeout http-request 5s
+  timeout http-keep-alive 2s
+
 frontend proxy
   mode tcp
   bind :5432
