--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -1,3 +1,10 @@
+resolvers docker
+  nameserver dns 127.0.0.11:53
+  resolve_retries       3
+  timeout resolve       5s
+  timeout retry         5s
+  hold valid           10s
+
 global
   fd-hard-limit 20000
 
@@ -18,7 +25,8 @@ frontend proxy
 backend proxy_server
   mode tcp
   balance leastconn
-  server s1 proxy:5432 send-proxy-v2
+  server s1 proxy:5432 # send-proxy-v2
+  # server-template s 10 proxy:5432 resolvers docker init-addr none check send-proxy-v2
 
 frontend https
   mode tcp
@@ -28,4 +36,5 @@ frontend https
 backend https_server
   mode tcp
   balance leastconn
-  server s2 proxy:443 send-proxy-v2
+  server s2 proxy:443 # send-proxy-v2
+  # server-template s 10 proxy:443  resolvers docker init-addr none check send-proxy-v2
