--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -25,7 +25,7 @@ frontend proxy
 backend proxy_server
   mode tcp
   balance leastconn
-  server s1 proxy:5432 # send-proxy-v2
+  server s1 proxy:5432 send-proxy-v2
   # server-template s 10 proxy:5432 resolvers docker init-addr none check send-proxy-v2
 
 frontend https
@@ -36,5 +36,5 @@ frontend https
 backend https_server
   mode tcp
   balance leastconn
-  server s2 proxy:443 # send-proxy-v2
+  server s2 proxy:443 send-proxy-v2
   # server-template s 10 proxy:443  resolvers docker init-addr none check send-proxy-v2
